--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,17 +1,12 @@
-sonar.projectKey=simple-list-universities
-sonar.projectName=simple-list-universities
-sonar.projectVersion=1.0
+sonar.projectKey=dhuharohim_cobareview1
+sonar.organization=dhuharohim
 
-# Path to the parent source code directory.
-sonar.sources=app
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=cobareview1
+#sonar.projectVersion=1.0
 
-# Language
-# We’ve commented this out, because we want to analyze both PHP and Javascript
-# sonar.language=php
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
 
-# Encoding of the source code
-sonar.sourceEncoding=UTF-8
-
-# Here, you can exclude all the directories that you don’t want to analyze.
-# As an example, I’m excluding the Providers directory
-sonar.exclusions=app/Providers/*, vendor/*
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
